force-app/main/default/objects/Account/fields/Check2__c.field-meta.xml
<CustomField>
    <fullName>Check2__c</fullName>
    <label>Check2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>