force-app/main/default/objects/Account/fields/check3__c.field-meta.xml
<CustomField>
    <fullName>check3__c</fullName>
    <label>check3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>