force-app/main/default/objects/Account/fields/check4__c.field-meta.xml
<CustomField>
    <fullName>check4__c</fullName>
    <label>check4</label>
    <length>200</length>
    <type>Text</type>
</CustomField>