force-app/main/default/objects/Account/fields/Check_field__c.field-meta.xml
<CustomField>
    <fullName>Check_field__c</fullName>
    <label>Check field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>