force-app/main/default/objects/Account/fields/Checking__c.field-meta.xml
<CustomField>
    <fullName>Checking__c</fullName>
    <label>Checking</label>
    <length>200</length>
    <type>Text</type>
</CustomField>